CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(2023-02-13)

FIND_PACKAGE(Threads REQUIRED)
set(CMAKE_CXX_STANDARD 14)

if (${CMAKE_COMPILER_IS_GNUCC})
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0 -g3 -Wall -Werror")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g3 -Wall -Werror")
endif()

ADD_SUBDIRECTORY(googletest)
ADD_SUBDIRECTORY(livehacking)
ADD_SUBDIRECTORY(exercises)

ADD_SUBDIRECTORY(company)
ADD_SUBDIRECTORY(company-bin)
ADD_SUBDIRECTORY(company-tests)
